test: move tests into Dockerfile

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,29 +41,20 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ hashFiles('Dockerfile') }}
           restore-keys: ${{ runner.os }}-buildx-
 
-      - name: Build (openssh-builder)
+      - name: Build and test openssh
         uses: docker/build-push-action@v2
         with:
-          target: openssh-builder
+          target: tester
           platforms: ${{ env.platforms }}
-          tags: ${{ format(steps.meta.outputs.tags, 'openssh-builder') }}
           context: .
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-          push: true
+          push: false
 
-      - name: Test (openssh-builder)
-        run: |
-          for platform in $(echo ${{ env.platforms }} | tr ',' ' '); do
-            echo "Testing ${platform}"
-            docker run -i --platform=${platform} --rm \
-              "${{ format(steps.meta.outputs.tags, 'openssh-builder') }}" \
-              < tests/openssh-builder.sh
-          done
-
-      - name: Build
+      - name: Build the image
         uses: docker/build-push-action@v2
         with:
+          target: static-openssh
           platforms: ${{ env.platforms }}
           tags: ${{ format(steps.meta.outputs.tags, 'openssh-static') }}
           context: .
@@ -71,7 +62,7 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           push: true
 
-      - name: Test
+      - name: Test the image
         run: |
           for platform in $(echo ${{ env.platforms }} | tr ',' ' '); do
             echo "Testing ${platform}"
