ci: update workflow [skip ci]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - Dockerfile
     tags:
       - '!**'
-  pull_request:
   workflow_dispatch:
 
 jobs:
